--- a/src/pages/register/RegisterForm.css
+++ b/src/pages/register/RegisterForm.css
@@ -16,7 +16,7 @@ body {
   background-color: #F0F4F3;
 }
 
-.container {
+.register-container {
   width: 400px;
   height: 500px;
   display: flex;
@@ -24,15 +24,15 @@ body {
   background-color: white;
   border-radius: 15px;
   overflow: hidden;
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.container-form {
+.register-form-wrapper {
   width: 100%;
   overflow: hidden;
 }
 
-.container-form form {
+.register-form-wrapper form {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -40,30 +40,30 @@ body {
   align-items: center;
 }
 
-.container-form h2 {
+.register-form-header {
   font-size: 30px;
   margin-bottom: 20px;
 }
 
-.social-networks {
+.register-social-networks {
   display: flex;
   gap: 12px;
   margin-bottom: 25px;
 }
 
-.social-networks ion-icon {
+.register-social-networks ion-icon {
   border: 1px solid #C9CCCB;
   border-radius: 6px;
   padding: 8px;
   cursor: pointer;
 }
 
-.container-form span {
+.register-form-text {
   font-size: 12px;
   margin-bottom: 15px;
 }
 
-.container-input {
+.register-input-container {
   width: 300px;
   height: 40px;
   margin-bottom: 10px;
@@ -75,7 +75,7 @@ body {
   background-color: #EEEEEE;
 }
 
-.container-input input {
+.register-input-container input {
   border: none;
   outline: none;
   width: 100%;
@@ -83,7 +83,7 @@ body {
   background-color: inherit;
 }
 
-.button {
+.register-button {
   width: 170px;
   height: 45px;
   font-size: 15px;
