--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -22,6 +22,7 @@ html, body {
   gap: 20px;
   width: 100%;
   max-width: 1200px;
+  margin-top: 30px; /* Margen superior para empujar las tablas hacia abajo */
 }
 
 .table-wrapper {
@@ -29,8 +30,45 @@ html, body {
   border-radius: 10px;
   box-shadow: 8px 8px 12px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  max-height: 400px;
-  overflow-y: auto;
-  overflow-x: hidden; /* Evita scroll horizontal */
   width: 100%;
+  margin-bottom: 20px; /* Espacio entre tablas */
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed; /* Hace que las celdas tengan un tamaño fijo */
+}
+
+th, td {
+  padding: 4px 6px;  /* Reducir más el padding para hacerlo más delgado */
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; /* Evita que el texto se desborde */
+  font-size: 12px;  /* Reducir el tamaño de la fuente para hacerlo más compacto */
+}
+
+th {
+  background-color: #f4f4f4;
+  font-weight: bold;
+}
+
+/* Responsividad */
+@media screen and (max-width: 768px) {
+  .table-wrapper {
+    max-height: none;
+  }
+
+  table {
+    display: block;
+    overflow-x: auto; /* Permite el desplazamiento horizontal en pantallas pequeñas */
+    white-space: nowrap; /* Evita el salto de línea dentro de las celdas */
+  }
+
+  th, td {
+    padding: 3px 5px;  /* Reducir aún más el padding para hacerlo más delgado */
+    font-size: 10px;  /* Reducir el tamaño de la fuente en pantallas pequeñas */
+  }
 }
