--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto; 
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
