--- a/src/pages/expenses/gastos.css
+++ b/src/pages/expenses/gastos.css
@@ -1,95 +1,79 @@
-body {
-    background-color: #f5f5f5;
+body,
+html {
     margin: 0;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    /* Evita el scroll doble */
 }
 
+.payments-container {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 20px;
+    max-width: 100%;
+    margin: 20px auto;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 10;
+}
 
+.payments-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
+}
 
-.payments-titulo {
+.payments-title {
     font-size: 24px;
     font-weight: bold;
-    margin: 0;
-    color: black;
+    color: #333;
 }
 
-.add-transaction-btn {
+.payments-add-btn {
     display: flex;
     align-items: center;
+    gap: 8px;
+    padding: 8px 16px;
     font-size: 16px;
-    color: #1890ff; 
-    background-color: transparent; 
-    border: none; 
+    background-color: #1890ff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.payments-add-btn:hover {
+    background-color: #40a9ff;
+}
+
+.payments-table-container {
+    overflow-x: auto;
+}
+
+.payments-edit-btn {
+    color: #1890ff;
+    border: none;
     cursor: pointer;
 }
 
-.add-transaction-btn .icon {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 24px;
-    height: 24px;
-    border: 2px solid #1890ff; 
-    border-radius: 50%; 
-    margin-left: 8px; 
-    color: #1890ff;
+.payments-delete-btn {
+    color: #ff4d4f;
+    border: none;
+    cursor: pointer;
 }
 
-.add-transaction-btn:hover .icon {
-    color: #40a9ff; 
-    border-color: #40a9ff; 
+.payments-edit-btn:hover {
+    color: #40a9ff;
 }
 
-.add-transaction-btn:hover {
-    color: #40a9ff; 
-}
-
-.table-container {
-    overflow-x: auto; 
-    padding-bottom: 20px; 
-}
-
-.ant-table {
-    border-radius: 8px;
-}
-
-.ant-table-thead > tr > th {
-    background-color: #fafafa;
-    font-weight: bold;
-}
-
-.ant-table-tbody > tr > td {
-    padding: 16px;
-}
-
-.ant-table-tbody > tr:hover > td {
-    background-color: #e6f7ff;
-}
-
-.action-button-edit {
-    background-color: yellow;
-    color: white;
-    border-color: yellow;
-}
-
-.action-button-edit:hover {
-    background-color: #ffc107; 
-    border-color: #ffc107; 
-    color: white; 
-}
-
-.action-button-delete {
-    background-color: red;
-    color: white;
-    border-color: red;
-}
-
-.action-button-delete:hover {
-    background-color: #ff4d4f; 
-    border-color: #ff4d4f; 
-    color: white; 
-}
-
-.add-transaction-name{
-    color: black;
+.payments-delete-btn:hover {
+    color: #ff7875;
 }
